# auditmind-ai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev-auth.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  README.md  docker-entrypoint.py  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 4d080c5f1bcc_reports_body_markdown.py  7438c0403014_investigations_schema_investigations_.py  9910da8bbd2c_risk_risk_scores.py  9f3b6a1c2d47_grant_reports_exported_uri_update.py  a0bf8e859800_identity_schema_users_tenants_.py  a7c4e912f568_audit_trail_schema_events.py  ae83cd542096_kg_schema_entity_candidates_resolution.py  b19d5f7a3c62_ingestion_chunks_search_vector_gin.py  c8f21a3d5e9b_engagement_members_roster_visibility.py  cf444e7a5393_retrieval_chunk_embeddings_pgvector.py  d0e0b50dff42_reporting_schema_findings_finding_.py  d4a19e6b7f31_identity_credentials_local_signup.py  ea15243395ac_ingestion_schema_documents_chunks_.py  f3a1c9d7b204_risk_schema_transactions_anomalies.py
apps/api/src/auditmind_api/: main.py
apps/api/src/auditmind_api/audit_trail/application/: services.py
apps/api/src/auditmind_api/audit_trail/domain/: entities.py  ports.py
apps/api/src/auditmind_api/audit_trail/infrastructure/: models.py  repository.py
apps/api/src/auditmind_api/audit_trail/interface/: dependencies.py  router.py
apps/api/src/auditmind_api/identity/application/: services.py
apps/api/src/auditmind_api/identity/domain/: entities.py  ports.py
apps/api/src/auditmind_api/identity/infrastructure/: models.py  repository.py  security.py
apps/api/src/auditmind_api/identity/interface/: dependencies.py  router.py  schemas.py
apps/api/src/auditmind_api/ingestion/application/: chunking.py  exceptions.py  services.py
apps/api/src/auditmind_api/ingestion/domain/: entities.py  ports.py
apps/api/src/auditmind_api/ingestion/infrastructure/: local_blob_storage.py  models.py  parsers.py  repository.py
apps/api/src/auditmind_api/ingestion/interface/: dependencies.py  router.py
apps/api/src/auditmind_api/investigations/application/: exceptions.py  services.py
apps/api/src/auditmind_api/investigations/domain/: entities.py  ports.py
apps/api/src/auditmind_api/investigations/infrastructure/: audit_recorder.py  models.py  repository.py  subject_lookup.py
apps/api/src/auditmind_api/investigations/interface/: dependencies.py  router.py  schemas.py
apps/api/src/auditmind_api/kg/application/: services.py
apps/api/src/auditmind_api/kg/domain/: entities.py  ports.py
apps/api/src/auditmind_api/kg/infrastructure/: entity_candidate_repository.py  models.py  neo4j_graph_store.py  transaction_source.py
apps/api/src/auditmind_api/kg/interface/: dependencies.py  router.py
apps/api/src/auditmind_api/reporting/application/: exceptions.py  pdf_rendering.py  services.py
apps/api/src/auditmind_api/reporting/domain/: entities.py  ports.py
apps/api/src/auditmind_api/reporting/infrastructure/: audit_recorder.py  chunk_lookup.py  local_report_storage.py  models.py  repository.py
apps/api/src/auditmind_api/reporting/interface/: dependencies.py  router.py  schemas.py
apps/api/src/auditmind_api/retrieval/application/: services.py
apps/api/src/auditmind_api/retrieval/domain/: entities.py  ports.py
apps/api/src/auditmind_api/risk/application/: rules.py  (+6 more)
apps/api/src/auditmind_api/shared/: auth.py  database.py  errors.py  logging.py  metrics.py  neo4j.py  orm_base.py  roles.py  settings.py  telemetry.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_app.py  test_audit_trail_endpoints.py  test_audit_trail_rls.py  test_identity_endpoints.py  test_identity_rls.py  test_ingestion_endpoints.py  test_ingestion_rls.py  test_investigations_endpoints.py  test_investigations_rls.py  test_knowledge_graph_endpoints.py  test_knowledge_graph_isolation.py  test_knowledge_graph_rls.py  test_reporting_endpoints.py  test_reporting_rls.py  test_retrieval_endpoints.py  test_retrieval_rls.py  test_risk_endpoints.py  test_risk_rls.py  test_risk_scoring_endpoints.py  test_semantic_search_endpoints.py
apps/api/tests/unit/: test_audit_trail_service.py  test_auth.py  test_chunking.py  test_errors.py  test_identity_service.py  test_ingestion_service.py  test_investigation_service.py  test_knowledge_graph_service.py  test_model_validation.py  test_parsers.py  test_reporting_service.py  test_retrieval_service.py  test_risk_rules.py  test_risk_service.py  test_settings.py  test_telemetry.py
services/agent-orchestrator/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/agent-orchestrator/config/: litellm.yaml
services/agent-orchestrator/migrations/: README  env.py
services/agent-orchestrator/migrations/versions/: 79e195013d60_agent_messages_copilot_chat.py  e1f2a3b4c5d6_agent_schema_runs_checkpoints_hitl.py
services/agent-orchestrator/src/agent_orchestrator/: main.py
services/agent-orchestrator/src/agent_orchestrator/application/: bootstrap_ci.py  copilot_actions.py  copilot_chat_service.py  copilot_reference.py  evaluation.py  graph.py  nodes.py  orchestrator.py  routing.py  tool_registry.py
services/agent-orchestrator/src/agent_orchestrator/domain/: agents.py  entities.py  ports.py  state.py
services/agent-orchestrator/src/agent_orchestrator/infrastructure/: api_client.py  gateway_config.py  llm_client.py  models.py  orm_base.py  repositories.py
services/agent-orchestrator/src/agent_orchestrator/interface/: dependencies.py  schemas.py
services/agent-orchestrator/src/agent_orchestrator/shared/: auth.py  database.py  errors.py  logging.py  settings.py
services/agent-orchestrator/tests/: conftest.py
services/agent-orchestrator/tests/integration/: test_agent_runs_endpoints.py  test_agent_schema_rls.py
services/agent-orchestrator/tests/unit/: test_copilot_actions.py  test_copilot_chat_service.py  test_evaluation.py  test_gateway_config.py  test_graph.py  test_llm_client.py  test_nodes.py  test_orchestrator.py  test_routing.py  test_settings.py  test_state_reducers.py  test_tool_registry.py
(+139 files in other folders)
