[project]
name = "auditmind-api"
version = "0.1.0"
description = "AuditMind AI — core API (BFF + domain services, modular monolith)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "structlog>=24.4,<25.0",
    "python-jose[cryptography]>=3.3,<4.0",
    # Self-service signup's local email/password credentials (Increment 14, identity.credentials).
    "bcrypt>=4.0,<5.0",
    "httpx>=0.27,<0.28",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<1.14",
    "pypdf>=5.0,<6.0",
    "anyio>=4.0,<5.0",
    "python-multipart>=0.0.12,<0.1",
    # Report PDF export (reporting/application/pdf_rendering.py) — pure Python, no system library
    # dependencies (no Chromium, no Pango/Cairo), so this stays a normal pip install rather than
    # adding apt packages to the already-deliberately-lean runtime image (see Dockerfile's own
    # comment on the CPU-only torch install).
    "fpdf2>=2.7,<3.0",
    # Retrieval's vector-embedding leg (Increment 08, Phase 4 §2 / Phase 6 §6-7).
    "pgvector>=0.3,<0.4",
    "sentence-transformers>=5.0,<6.0",
    # Knowledge Graph context (Increment 09, Phase 4 §3) — pinned to the 5.x driver line to match
    # the docker-compose `neo4j:5-community` server image.
    "neo4j>=5.26,<6.0",
    # ML-dependent risk tiers (Increment 10, Phase 7 §2-§3): Isolation Forest and HDBSCAN.
    "scikit-learn>=1.5,<2.0",
    "hdbscan>=0.8,<0.9",
    # In-app model validation (risk/application/model_validation.py) — already a transitive
    # dependency of scikit-learn/hdbscan, declared explicitly since this module imports it directly.
    "numpy>=1.26,<3.0",
    # Observability (Increment 13, Phase 10 §5): OTel SDK + auto-instrumentation. Traces and
    # metrics are pushed via OTLP to the Collector — this app never talks to Prometheus/Grafana
    # directly (Phase 10 §5's own reasoning for why a Collector exists at all).
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2.0",
    "types-python-jose>=3.3,<4.0",
    # Enforces the hexagonal layering and bounded-context isolation documented in Phase 3 — see
    # [tool.importlinter] below.
    "import-linter>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's dependency-injection convention is `param: T = Depends(...)` in the signature
# itself — this is the documented, idiomatic pattern (https://fastapi.tiangolo.com/tutorial/dependencies/),
# not the "mutable default argument" footgun this rule exists to catch elsewhere.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

# pgvector, hdbscan, and sklearn all ship runtime code but no py.typed marker / stub package as of
# the pinned versions — an upstream gap, not something this codebase can fix. Scoped narrowly to
# these packages so it doesn't weaken --strict for anything else.
[[tool.mypy.overrides]]
module = ["pgvector.*", "hdbscan.*", "sklearn.*"]
ignore_missing_imports = true

# Enforces the two rules Phase 3 §1 and every increment doc's "architectural decisions" section
# describe but that were, until now, followed only by convention: (1) each bounded context's
# domain -> application -> infrastructure -> interface chain is one-directional (e.g. a parser in
# infrastructure/ may raise an exception type owned by application/, matching the documented
# reason those types live above domain/, but application/ may never import infrastructure/ or
# interface/); (2) bounded contexts never import each other's internals — a context that needs
# another context's data defines its own minimal port instead (see reporting's ChunkLookup).
[tool.importlinter]
root_package = "auditmind_api"
include_external_packages = true

# `identity` is modeled as a foundation layer, not a peer: every other context's routes need
# "is this caller a member of this engagement, with this role" (`require_engagement_member`,
# `get_current_db_user`) as their request-level auth gate, and that lookup is necessarily built on
# identity's own membership records. `identity` itself never imports any of the other 7 contexts
# (verified: `grep -rl 'from auditmind_api\.(ingestion|reporting|...)' identity/` finds nothing) —
# so this is a one-directional, foundation-layer dependency, exactly what a `layers` contract
# exists to express, not the peer-to-peer leakage the plain `independence` contract below still
# forbids among the other 7. (An earlier attempt routed this through a new `shared/` module instead
# — confirmed empirically that import-linter's independence check still flags the *transitive*
# path through `shared`, so re-exporting through `shared` doesn't avoid the problem; modeling the
# real dependency honestly does.)
[[tool.importlinter.contracts]]
name = "identity is a foundation layer; the other 7 contexts may depend on it but not each other"
type = "layers"
layers = [
    "auditmind_api.ingestion | auditmind_api.reporting | auditmind_api.risk | auditmind_api.audit_trail | auditmind_api.retrieval | auditmind_api.kg | auditmind_api.investigations",
    "auditmind_api.identity",
]

[[tool.importlinter.contracts]]
name = "Hexagonal layering within each bounded context"
type = "layers"
layers = [
    "interface",
    "infrastructure",
    "application",
    "domain",
]
containers = [
    "auditmind_api.identity",
    "auditmind_api.ingestion",
    "auditmind_api.reporting",
    "auditmind_api.risk",
    "auditmind_api.audit_trail",
    "auditmind_api.retrieval",
    "auditmind_api.kg",
    "auditmind_api.investigations",
]
